# credit-risk-end-to-end

./: .gitignore  README.md  pyproject.toml
notebooks/: 21_underwriter_vs_lc.ipynb  22_validation.ipynb
scripts/: build_db.py  train_baseline copy.py  train_baseline.py
sql/: 01_clean_schema.sql  02_data_quality_checks.sql  03_status_mix_vintage.sql  04_default_maturation.sql  05_split_design.sql  10_grade_risk_profile.sql  11_monthly_originations.sql  12_vintage_curves.sql  20_feature_eda.sql  ingest.sql
src/credit_risk/: data.py  drift.py  evaluate.py  model.py  split.py
