[project]
name = "credit-risk"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb",
    "pandas",
    "numpy",
    "scikit-learn",
    "lightgbm",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "ipykernel",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
